# GameofLife

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  GameofLife  Makefile  README.md  ansi_console.c  board_drawer.h  cmake_install.cmake  gameoflife  install_manifest.txt  life.c  life.h  main  main.c
.history/: CMakeLists_20210612023739.txt  CMakeLists_20210612024135.txt  CMakeLists_20210612024147.txt  CMakeLists_20210612025020.txt  run_20210612023659.sh  run_20210612023857.sh  run_20210612024034.sh  run_20210612024101.sh  run_20210612025101.sh  run_20210612025205.sh  run_20210612025223.sh
console/: CMakeLists.txt  Makefile  ansi_console.c  board_drawer.h  cmake_install.cmake
doc/html/: annotated.html  board__drawer_8h.html  board__drawer_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  index.html  life_8c.html  life_8h.html  life_8h_source.html  main_8c.html  md_README.html  menudata.js  pages.html  structStructure.html  structboard-members.html  structboard.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  files_0.js  (+15 more)
doc/latex/: annotated.tex  board__drawer_8h.tex  files.tex  life_8c.tex  life_8h.tex  main_8c.tex  refman.tex  structStructure.tex  structboard.tex
game/: CMakeLists.txt  Makefile  cmake_install.cmake  life.c  life.h
